--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Git and Github</title>
     </head>
     <body>
+        <h1>GIT & GITHUB</h1>
         <p>This page is a test to learn more about git and github</p>
     </body>
 </html>
