Update finished cart page

--- a/cart.html
+++ b/cart.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <h1>Cart</h1>
-        <p>In build...</p>   
+        <p>Carrinho pronto para produção</p>   
     </body>
 </html>
